[metadata]
name = aisa
version = 1.0.0
author = Mauro Faccin,
author_email = mauro.fccn@gmail.com
license = GNU GPL v3+
description = AISA: Auto-Information State Aggregation
keywords = network, partition, state, aggregation, graph, community, detection, dynamics
url = https://maurofaccin.github.io/aisa
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    Topic :: Scientific/Engineering :: Physics
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    numpy
    scipy
    networkx
provides = aisa
